--- a/css/style.css
+++ b/css/style.css
@@ -58,6 +58,10 @@ ul{
     justify-content: space-between;
 }
 
+.jc-fs {
+    justify-content: flex-start;
+}
+
 .jc-fe{
     justify-content: flex-end;
 }
@@ -72,17 +76,6 @@ ul{
     margin: 0 auto;
     padding: 0 15px;
 }
-
-/*.your-parameters,*/
-/*.registration-popup,*/
-/*.authorization-popup{*/
-/*    display: none;*/
-/*    height: 100vh;*/
-/*    position: absolute;*/
-/*    top: 0;*/
-/*    left: 0;*/
-/*    right: 0;*/
-/*}*/
 
 .logo-main{
     padding-top: 100px;
@@ -177,8 +170,10 @@ ul{
 
 #gender-man,
 #gender-woman{
-    margin-right: 10px;
-    height: 5px;
+    margin-right: 20px;
+    height: 0;
+    width: 0;
+    -webkit-appearance: none;
     -moz-appearance: none;
 }
 
@@ -214,7 +209,7 @@ ul{
 .choose-man:before{
     height: 25px;
     width: 25px;
-    top: -6px;
+    top: -8px;
     left: -32px;
 }
 
@@ -342,107 +337,107 @@ ul{
     text-align: center;
 }
 
-.picker-wrapper {
-    text-align: center;
-    position: relative;
-    height: 210px;
-    display: inline-block;
-    line-height: 30px;
-    width: 100%;
-    font-size: 20px;
-    perspective: 1000px;
-    perspective-origin: center center;
-}
+/*.picker-wrapper {*/
+/*    text-align: center;*/
+/*    position: relative;*/
+/*    height: 210px;*/
+/*    display: inline-block;*/
+/*    line-height: 30px;*/
+/*    width: 100%;*/
+/*    font-size: 20px;*/
+/*    perspective: 1000px;*/
+/*    perspective-origin: center center;*/
+/*}*/
 
-.picker-wrapper:nth-child(1):after {
-    content: '';
-    background-color: #fff;
-    height: 209px;
-    top: 0;
-    width: 15px;
-    position: absolute;
-    z-index: 5;
-    right: 0;
-}
+/*.picker-wrapper:nth-child(1):after {*/
+/*    content: '';*/
+/*    background-color: #fff;*/
+/*    height: 209px;*/
+/*    top: 0;*/
+/*    width: 15px;*/
+/*    position: absolute;*/
+/*    z-index: 5;*/
+/*    right: 0;*/
+/*}*/
 
-.picker-wrapper:nth-child(2):after {
-    content: '';
-    background-color: #fff;
-    height: 209px;
-    top: 0;
-    width: 15px;
-    position: absolute;
-    z-index: 5;
-    right: 0;
-}
+/*.picker-wrapper:nth-child(2):after {*/
+/*    content: '';*/
+/*    background-color: #fff;*/
+/*    height: 209px;*/
+/*    top: 0;*/
+/*    width: 15px;*/
+/*    position: absolute;*/
+/*    z-index: 5;*/
+/*    right: 0;*/
+/*}*/
 
-.picker-wrapper:nth-child(3):after {
-    content: '';
-    background-color: #fff;
-    height: 209px;
-    top: 0;
-    width: 15px;
-    position: absolute;
-    z-index: 5;
-    right: 0;
-}
+/*.picker-wrapper:nth-child(3):after {*/
+/*    content: '';*/
+/*    background-color: #fff;*/
+/*    height: 209px;*/
+/*    top: 0;*/
+/*    width: 15px;*/
+/*    position: absolute;*/
+/*    z-index: 5;*/
+/*    right: 0;*/
+/*}*/
 
-.picker-wrapper::-webkit-scrollbar {width:0;}
+/*.picker-wrapper::-webkit-scrollbar {width:0;}*/
 
-.picker-scroller {
-    -webkit-transition : -webkit-transform 100ms ease;
-    -webkit-transform : translateZ(-90px) rotateX(0deg);
-    -webkit-transform-style : preserve-3d;
-    height : 100%;
-}
-.picker-scroller .option{
-    position: absolute;
-    backface-visibility: hidden;
-    -webkit-backface-visibility: hidden;
-    width : 100%;
-    transition: all 300ms;
-    color : black;
-    transform-origin: 50% 50%;
-    -webkit-transform-style : preserve-3d;
-}
+/*.picker-scroller {*/
+/*    -webkit-transition : -webkit-transform 100ms ease;*/
+/*    -webkit-transform : translateZ(-90px) rotateX(0deg);*/
+/*    -webkit-transform-style : preserve-3d;*/
+/*    height : 100%;*/
+/*}*/
+/*.picker-scroller .option{*/
+/*    position: absolute;*/
+/*    backface-visibility: hidden;*/
+/*    -webkit-backface-visibility: hidden;*/
+/*    width : 100%;*/
+/*    transition: all 300ms;*/
+/*    color : black;*/
+/*    transform-origin: 50% 50%;*/
+/*    -webkit-transform-style : preserve-3d;*/
+/*}*/
 
 
-.picker-up {
-    position: absolute;
-    top: 0;
-    z-index: 2;
-    background: rgba(256, 256, 256, 0.6);
-    width: 100%;
-    height: 50px;
-    border-bottom: 1px solid #53bc53;
+/*.picker-up {*/
+/*    position: absolute;*/
+/*    top: 0;*/
+/*    z-index: 2;*/
+/*    background: rgba(256, 256, 256, 0.6);*/
+/*    width: 100%;*/
+/*    height: 50px;*/
+/*    border-bottom: 1px solid #53bc53;*/
 
-}
-.picker-down {
-    position: absolute;
-    top: 120px;
-    z-index: 2;
-    background: rgba(256, 256, 256, 0.6);
-    width: 100%;
-    height: 50px;
-    border-top: 1px solid #53bc53;
-}
-.clone-scroller {
-    -webkit-box-shadow: inset 0 20px 24px 3px white, inset 0 -20px 24px 3px white;
-    -ms-box-shadow: inset 0 10px 24px 3px white, inset 0 -20px 24px 3px white;
-    -moz-box-shadow: inset 0 10px 24px 3px white, inset 0 -20px 24px 3px white;
-    box-shadow: inset 0 10px 24px 3px white, inset 0 -20px 24px 3px white;
-    z-index: 5;
-    overflow: auto;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    width: 100%;
-    padding-top: 50px;
-    padding-bottom: 50px
-}
-.clone-scroller .option {
-    visibility: hidden;
-}
+/*}*/
+/*.picker-down {*/
+/*    position: absolute;*/
+/*    top: 120px;*/
+/*    z-index: 2;*/
+/*    background: rgba(256, 256, 256, 0.6);*/
+/*    width: 100%;*/
+/*    height: 50px;*/
+/*    border-top: 1px solid #53bc53;*/
+/*}*/
+/*.clone-scroller {*/
+/*    -webkit-box-shadow: inset 0 20px 24px 3px white, inset 0 -20px 24px 3px white;*/
+/*    -ms-box-shadow: inset 0 10px 24px 3px white, inset 0 -20px 24px 3px white;*/
+/*    -moz-box-shadow: inset 0 10px 24px 3px white, inset 0 -20px 24px 3px white;*/
+/*    box-shadow: inset 0 10px 24px 3px white, inset 0 -20px 24px 3px white;*/
+/*    z-index: 5;*/
+/*    overflow: auto;*/
+/*    height: 100%;*/
+/*    position: absolute;*/
+/*    top: 0;*/
+/*    width: 100%;*/
+/*    padding-top: 50px;*/
+/*    padding-bottom: 50px*/
+/*}*/
+/*.clone-scroller .option {*/
+/*    visibility: hidden;*/
+/*}*/
 
 @media (max-width: 768px) {
     .overlay{
@@ -501,16 +496,18 @@ ul{
         margin-bottom: 10px;
     }
 
-    #gender-man, #gender-woman {
-        margin-right: 5px;
+    #gender-man,
+    #gender-woman {
+        height: 0;
+        width: 0;
     }
 
-    .choose-woman:before, .choose-man:before{
-        width: 20px;
-        height: 20px;
-        top: -5px;
-        left: -26px;
-    }
+    /*.choose-woman:before, .choose-man:before{*/
+    /*    width: 20px;*/
+    /*    height: 20px;*/
+    /*    top: -5px;*/
+    /*    left: -26px;*/
+    /*}*/
 }
 
 @media (max-width: 400px) {
@@ -983,54 +980,14 @@ ul{
     box-shadow: 0 0 5px #aeaeae;
 }
 
-#datepicker{
-    background: transparent;
-    border: none;
-    outline: none;
-    color: #fff;
-    width: 75px;
-}
-
-#ui-datepicker-div{
-    display: none;
-    background: #fff;
-    padding: 10px;
-    box-shadow: 0 0 5px;
-    position: absolute;
-    top: 45px;
-    left: 75%;
-}
-
-.ui-datepicker-prev,
-.ui-datepicker-next{
-    box-shadow: 0 0 3px;
-    padding: 0 5px;
-    float: left;
-}
-
-.ui-datepicker-next{
-    margin-right: 15px;
-}
-
 .tabs-days_fixed .container:last-child{
-    overflow: hidden;
+    padding-top: 15px;
+    flex-wrap: wrap;
 }
 
-#makeMeScrollable{
-    overflow-x: scroll;
-    -ms-overflow-x: scroll;
-    padding: 15px 0 0;
-}
+.tabs-days_fixed .container:last-child a{
+    padding: 5px;
 
-.scroll-container{
-    width: 100%;
-    overflow-x: scroll;
-    white-space: nowrap;
-}
-
-.scroll-container > .part{
-    float: left;
-    padding: 0 10px;
 }
 
 .tabs-list {
@@ -1078,7 +1035,6 @@ ul{
     color: #fff;
     height: 40px;
     font-weight: 600;
-    justify-content: space-between;
     padding: 0 20px;
     box-shadow: 0 0 5px #aeaeae;
 }
@@ -1157,18 +1113,12 @@ ul{
 }
 
 .tabs-days_fixed img{
-    width: 20px;
+    width: 18px;
+    height: 18px;
 }
 
 #magazine .tabs-block {
     padding: 45px 0 0;
-}
-
-#magazine .ui-datepicker-trigger {
-    margin-left: 5px;
-    position: relative;
-    top: 3px;
-    cursor: pointer;
 }
 
 .tabs-days_fixed .tabs-list {
@@ -1177,10 +1127,6 @@ ul{
 
 .tabs-days_fixed .tabs-list a{
     color:#acdeac;
-}
-
-.tabs-days_fixed .tabs-list .ui-tabs-active a{
-    color: #fff;
 }
 
 .calories-left{
@@ -1239,13 +1185,6 @@ ul{
 #magazine input[type="range"]::-moz-range-progress {
     background-color: #8e8e8e;
 }
-
-/*#magazine input[type="range"]::-ms-fill-lower {*/
-/*    background-color: #aeaeae;*/
-/*}*/
-/*#magazine input[type="range"]::-ms-fill-upper {*/
-/*    background-color: transparent;*/
-/*}*/
 
 #magazine input[type='range']{
     margin-right: 30px;
@@ -1653,10 +1592,15 @@ ul{
     }
 }
 
-@media (max-width: 430px) {
+@media (max-width: 435px) {
 
     .tabs-list {
         width: 312px;
+    }
+
+    .tabs-days_fixed .container a:first-child,
+    .tabs-days_fixed .container a:last-child {
+       display: none;
     }
 
     .tab-fixed .tabs-list{
@@ -1856,51 +1800,6 @@ ul{
     }
 }
 
-.circliful {
-    position: relative;
-}
-
-.circle-text, .circle-info, .circle-text-half, .circle-info-half {
-    width: 100%;
-    position: absolute;
-    text-align: center;
-    display: inline-block;
-}
-
-.circle-info, .circle-info-half {
-    color: #999;
-}
-
-.circliful .fa {
-    margin: -10px 3px 0 3px;
-    position: relative;
-    bottom: 4px;
-}
-
-.circle-container{
-    margin-bottom: 25px;
-}
-
-.my-canvas{
-    width: 300px;
-    height: 300px;
-    overflow: hidden;
-    border-radius: 50%;
-    position: relative;
-}
-
-.sector {
-    width: 50%;
-    height: 50%;
-    position: absolute;
-    left: 50%;
-    top: 0;
-    transform-origin: left bottom;
-    background: #000;
-}
-
-/*programm page*/
-
 #programs h3{
     text-transform: uppercase;
     margin-bottom: 15px;
@@ -1910,14 +1809,8 @@ ul{
     margin-right: 50px;
 }
 
-#myCanvas:before{
-    position: absolute;
-    content: '2646 кал';
-    z-index: 1;
-}
-
-#myLegend div{
-    margin-bottom: 10px;
+#myCanvas img {
+    width: 130px;
 }
 
 .good-balance{
@@ -1946,7 +1839,7 @@ ul{
 .diagram:after{
     position: absolute;
     content: '2646 кал';
-    left: 8%;
+    left: 28px;
     font-weight: 600;
     font-size: 18px;
 }
@@ -2022,151 +1915,16 @@ ul{
 
 .additional-programs .slider {
     width: 100%;
-    margin: 25px;
 }
 
-/* Slider */
-.slick-slider
-{
-    position: relative;
-
-    display: block;
-    box-sizing: border-box;
-
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-
-    -webkit-touch-callout: none;
-    -khtml-user-select: none;
-    -ms-touch-action: pan-y;
-    touch-action: pan-y;
-    -webkit-tap-highlight-color: transparent;
+.slide {
+    width: calc(100% / 3);
+    margin: 0 5px;
+    /*height: 500px;*/
 }
 
-.slick-list
-{
-    position: relative;
-
-    display: block;
-    overflow: hidden;
-
-    margin: 0;
-    padding: 0;
-}
-.slick-list:focus
-{
-    outline: none;
-}
-
-.slick-list.dragging
-{
-    cursor: pointer;
-    cursor: hand;
-}
-
-.slick-slider .slick-track,
-.slick-slider .slick-list
-{
-    -webkit-transform: translate3d(0, 0, 0);
-    -moz-transform: translate3d(0, 0, 0);
-    -ms-transform: translate3d(0, 0, 0);
-    -o-transform: translate3d(0, 0, 0);
-    transform: translate3d(0, 0, 0);
-}
-
-.slick-track{
+.slide-img img {
     width: 100%;
-    position: relative;
-    top: 0;
-    left: 0;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-}
-.slick-track:before,
-.slick-track:after
-{
-    display: table;
-    content: '';
-}
-.slick-track:after
-{
-    clear: both;
-}
-
-.slick-loading .slick-track
-{
-    visibility: hidden;
-}
-
-.slick-slide
-{
-    display: none;
-    float: left;
-    /*height: 100%;*/
-    min-height: 1px;
-}
-[dir='rtl'] .slick-slide
-{
-    float: right;
-}
-.slick-slide img
-{
-    display: block;
-}
-.slick-slide.slick-loading img
-{
-    display: none;
-}
-.slick-slide.dragging img
-{
-    pointer-events: none;
-}
-.slick-initialized .slick-slide
-{
-    display: block;
-}
-.slick-loading .slick-slide
-{
-    visibility: hidden;
-}
-.slick-vertical .slick-slide
-{
-    display: block;
-
-    height: auto;
-
-    border: 1px solid transparent;
-}
-.slick-arrow.slick-hidden {
-    display: none;
-}
-
-.additional-programs .slick-slide {
-    margin: 0 20px;
-}
-
-.additional-programs .slick-slide img {
-    width: 100%;
-}
-
-.slide-img{
-    margin-bottom: 5px;
-}
-
-.additional-programs .slick-slide {
-    transition: all ease-in-out .3s;
-    opacity: .2;
-}
-
-.additional-programs .slick-active {
-    opacity: .5;
-}
-
-.additional-programs .slick-current {
-    opacity: 1;
 }
 
 .additional-programs  .slide h4{
@@ -2185,12 +1943,6 @@ ul{
     .additional-programs .slider {
         width: 700px;
         margin: 25px auto;
-    }
-}
-
-@media (max-width: 754px) {
-    .diagram:after{
-        left: 10%;
     }
 }
 
@@ -2215,8 +1967,16 @@ ul{
 }
 
 @media (max-width: 582px){
-    .diagram:after {
-        left: 12%;
+
+    .slider {
+        justify-content: center;
+        flex-direction: column;
+    }
+
+    .slide {
+        width: auto;
+        margin-bottom: 30px;
+        height: auto;
     }
 
     .product-img {
@@ -2256,13 +2016,6 @@ ul{
     }
 }
 
-@media (max-width: 518px) {
-
-    .diagram:after {
-        left: 15%;
-    }
-}
-
 @media (max-width: 480px) {
 
     .additional-programs .slider {
@@ -2272,10 +2025,6 @@ ul{
 }
 
 @media (max-width: 430px) {
-
-    .diagram:after {
-        left: 18%;
-    }
 
     .product-img {
         height: 60px;
@@ -2287,18 +2036,9 @@ ul{
         height: 68px;
     }
 
-    #myLegend div {
-        font-size: 12px;
-    }
-
     #myCanvas {
         margin-right: 25px;
         width: 150px;
-    }
-
-    .diagram:after {
-        left: 15%;
-        font-size: 13px;
     }
 
     .good-balance_text span {
@@ -2914,30 +2654,6 @@ ul{
     }
 }
 
-/*.units-block{*/
-/*    display: none;*/
-/*}*/
-
-/*.confidentiality-block{*/
-/*    display: none;*/
-/*}*/
-
-/*.blog{*/
-/*    display: none;*/
-/*}*/
-
-/*.support-feedback_block{*/
-/*    display: none;*/
-/*}*/
-
-/*.terms-conditions_block{*/
-/*    display: none;*/
-/*}*/
-
-/*.exit-block{*/
-/*    display: none;*/
-/*}*/
-
 .blog-title{
     padding: 20px;
     border-bottom: 1px solid #aeaeae;
@@ -3175,30 +2891,27 @@ ul{
 }
 
 .save-btn{
+    margin-top: 30px;
     padding: 15px 80px;
     max-width: none;
     width: auto;
 }
 
-@media (max-width: 425px){
-    #profile .range-norma{
+@media (max-width: 530px){
+    .change-range .range-norma{
         width: 285px;
     }
 
-    #profile .save-btn {
-        padding: 10px 55px;
+    .change-range .save-btn {
+        padding: 10px 45px;
     }
-
-    }
+}
 
 @media (max-width: 375px) {
     .change-norma-blog h3{
         font-size: 16px;
     }
 }
-
-
-/*SlIDER STYLE*/
 
 /*Friends popup*/
 
